<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="10dip"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/player_name" />

    <EditText
        android:id="@+id/newPlayerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/give_name_player" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/player_score" />

    <EditText
        android:id="@+id/newScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:text="@string/player_score" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/number_of_warmups" />

    <EditText
        android:id="@+id/warmUpRounds"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:text="@string/default_warm_up_rounds" 
        android:inputType="number" />

    <Button
        android:id="@+id/create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_game" />

</LinearLayout>