<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip"
        android:scrollbars="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/rank"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/rank_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="10dip"
            android:text="@string/rank_default" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#FF909090" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/number_of_rounds"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/number_of_rounds_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="10dip"
            android:text="@string/number_of_rounds_default" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#FF909090" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/turn_score_current"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/turn_score_current_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="10dip"
            android:text="@string/turn_score_default" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#FF909090" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/turn_score_best"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/turn_score_best_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="10dip"
            android:text="@string/turn_score_default" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#FF909090" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/turn_score_average"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/turn_score_average_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="10dip"
            android:text="@string/turn_score_default" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#FF909090" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/rank_best"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/rank_best_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="10dip"
            android:text="@string/rank_default" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#FF909090" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/rank_worst"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/rank_worst_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="10dip"
            android:text="@string/rank_default" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#FF909090" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/zero_penalty"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/zero_penalty_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="10dip"
            android:text="@string/zero_penalty_default" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#FF909090" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/penalty_hit"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/penalty_hit_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="10dip"
            android:text="@string/penalty_hit_default" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#FF909090" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/penalty_victim"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/penalty_victim_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="10dip"
            android:text="@string/penalty_hit_default" />
    </LinearLayout>

</ScrollView>