<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dip" >

    <TextView
        android:id="@+id/options_score_to_reach"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/score_to_reach" />

    <EditText
        android:id="@+id/options_score_field"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/score_to_reach"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/buttonAddPlayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_add_player" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

    </LinearLayout>

    <Button
        android:id="@+id/submit_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_options" />

</LinearLayout>